<resources>
    <string name="app_name">Learning Task 4.2</string>
    <string name="calculator">Final Grade Calculator</string>
    <string name="app_instructions">Enter Midterm and Endterm Grades to compute final Grade and remark(Passed or Failed).</string>
    <string name="txt_compute_result">Showing Result(s)</string>
    <string name="computebtn">Compute</string>
    <string name="num1">Enter Midterm Grade</string>
    <string name="num2">Enter EndTerm Grade</string>
    <string name="Remarks">Remark: </string>
    <string name="RemarkP">Student Passed</string>
    <string name="RemarkF">Student Failed</string>
    <string name="FGrade">Final Grade: </string>
    <string name="txt_result1">Showing result...</string>
    <string name="txt_result2">Showing result...</string>
    <string name="btn_return">New Computation</string>
    <string name="title_activity_resultP">PassedActivity</string>
    <string name="title_activity_resultF">FailedActivity</string>
</resources>